        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=23022
        Fix multiple issues with appcache online whitelist handling

        Test: http/tests/appcache/online-whitelist.html

        * loader/appcache/ApplicationCache.cpp:
        (WebCore::ApplicationCache::isURLInOnlineWhitelist): Test whitelist entries as prefixes,
        making it possible to use them for CGI invocation (as required by HTML5).

        * loader/DocumentLoader.cpp: (WebCore::DocumentLoader::shouldLoadResourceFromApplicationCache):
        Re-ordered checks, so that resources that are cached, but are also listed in online whitelist
        are loaded from the cache. This is required by HTML5, although Firefox doesn't match.

        * loader/appcache/ManifestParser.cpp:
        (WebCore::parseManifest):
        * loader/appcache/ManifestParser.h:
        * loader/appcache/ApplicationCache.h:
        (WebCore::ApplicationCache::onlineWhitelist):
        * loader/appcache/ApplicationCacheStorage.cpp:
        (WebCore::ApplicationCacheStorage::store):
        (WebCore::ApplicationCacheStorage::loadCache):
        Changed online whitelist to be a vector of URLs, which is better suited for the new algorithm.



Canonical link: https://commits.webkit.org/31747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39548 268f45cc-cd09-0410-ab3c-d52691b4dbfc