WebCore/loader/appcache/ApplicationCache.h
@@ -68,9 +68,9 @@ public:
     bool addDynamicEntry(const String& url);
     void removeDynamicEntry(const String& url);
     
-    void setOnlineWhitelist(const HashSet<String>& onlineWhitelist);
-    const HashSet<String>& onlineWhitelist() const { return m_onlineWhitelist; }
-    bool isURLInOnlineWhitelist(const KURL&);
+    void setOnlineWhitelist(const Vector<KURL>& onlineWhitelist);
+    const Vector<KURL>& onlineWhitelist() const { return m_onlineWhitelist; }
+    bool isURLInOnlineWhitelist(const KURL&); // There is an entry in online whitelist that has the same origin as the resource's URL and that is a prefix match for the resource's URL.
 
     void setFallbackURLs(const FallbackURLVector&);
     const FallbackURLVector& fallbackURLs() const { return m_fallbackURLs; }
@@ -89,16 +89,17 @@ public:
     void clearStorageID();
     
     static bool requestIsHTTPOrHTTPSGet(const ResourceRequest&);
+
 private:
     ApplicationCache();
     
     ApplicationCacheGroup* m_group;
     ResourceMap m_resources;
     ApplicationCacheResource* m_manifest;
-    
-    HashSet<String> m_onlineWhitelist;
+
+    Vector<KURL> m_onlineWhitelist;
     FallbackURLVector m_fallbackURLs;
-    
+
     unsigned m_storageID;
 };
 
